[package]
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
description = "Simple state-based main loop for doing stuff with glium"
license = "Apache-2.0"
name = "stateloop"
repository = "https://github.com/YeyaSwizaw/stateloop"
version = "0.2.0"

[dependencies]
vulkano = { git = "https://github.com/tomaka/vulkano" }
vulkano-win = { git = "https://github.com/tomaka/vulkano" }
winit = "0.6.4"

[workspace]
members = ["test"]
