[package]
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
description = "Simple state-based main loop for doing stuff with a winit window"
license = "Apache-2.0"
name = "stateloop"
repository = "https://github.com/YeyaSwizaw/stateloop"
version = "0.4.0"

[dependencies]
winit = "0.11.2"

[workspace]
members = ["test"]
