[package]
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]
description = "Simple state-based main loop for doing stuff with a winit window"
license = "Apache-2.0"
name = "stateloop"
repository = "https://github.com/YeyaSwizaw/stateloop"
version = "0.5.0"
edition = "2021"

[dependencies]
winit = "0.26.1"

[workspace]
members = ["test"]
