[package]
name = "app"
version = "0.1.0"
authors = ["Samuel Sleight <samuel.sleight@gmail.com>"]

[dependencies]
stateloop = { path = ".." }
vulkano = { git = "https://github.com/tomaka/vulkano" }
vulkano-win = { git = "https://github.com/tomaka/vulkano" }
vulkano-shader-derive = { git = "https://github.com/tomaka/vulkano" }
